--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "drizzle-template",
+  "name": "blockchain-ipfs",
   "version": "0.1",
-  "description": "",
   "author": {
     "name": "Jan Michek",
     "email": "jan@janmichek.cz"
